{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 70,
  "lineage": "f9af7ce9-d1f3-06fc-3029-c06b89a558ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efe830a0869f9298",
            "arn": "arn:aws:ec2:eu-west-3:381492201346:elastic-ip/eipalloc-0efe830a0869f9298",
            "association_id": "eipassoc-0692c4f466d977f4c",
            "domain": "vpc",
            "id": "eipalloc-0efe830a0869f9298",
            "instance": "i-05daa13023ae8f162",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0b9242d3dcca33306",
            "private_dns": "ip-10-0-7-250.eu-west-3.compute.internal",
            "private_ip": "10.0.7.250",
            "public_dns": "ec2-15-188-154-252.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.154.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.task-instance",
            "aws_security_group.task-SG",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac45f3035ff009e",
            "arn": "arn:aws:ec2:eu-west-3:381492201346:instance/i-05daa13023ae8f162",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05daa13023ae8f162",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pari-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbffa0c2328feb60",
            "private_dns": "ip-10-0-7-230.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.230",
            "public_ip": "15.236.133.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-069c6f819e1eea4a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075caa42fbab83a4e",
            "tags": {
              "Name": "Task-instance"
            },
            "tags_all": {
              "Name": "Task-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d75edc29609aacc"
            ]
          },
          "dependencies": [
            "aws_security_group.task-SG",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381492201346:internet-gateway/igw-0066c04c94cefd733",
            "id": "igw-0066c04c94cefd733",
            "owner_id": "381492201346",
            "tags": {
              "Name": "Task-IG"
            },
            "tags_all": {
              "Name": "Task-IG"
            },
            "vpc_id": "vpc-05520ee0a5c723c71"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "task-NI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381492201346:network-interface/eni-0b9242d3dcca33306",
            "attachment": [
              {
                "attachment_id": "eni-attach-08c149426525f8ac0",
                "device_index": 1,
                "instance": "i-05daa13023ae8f162"
              }
            ],
            "id": "eni-0b9242d3dcca33306",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:cf:2a:40:ff:dd",
            "owner_id": "381492201346",
            "private_ip": "10.0.7.250",
            "private_ip_list": [
              "10.0.7.250"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.7.250"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00d75edc29609aacc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075caa42fbab83a4e",
            "tags": {
              "Name": "Task-NI"
            },
            "tags_all": {
              "Name": "Task-NI"
            }
          },
          "dependencies": [
            "aws_instance.task-instance",
            "aws_security_group.task-SG",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381492201346:route-table/rtb-0ef7ed4cc81b272fd",
            "id": "rtb-0ef7ed4cc81b272fd",
            "owner_id": "381492201346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0066c04c94cefd733",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Task-RT"
            },
            "tags_all": {
              "Name": "Task-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05520ee0a5c723c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.task-IG",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be34fd0e7fcd5e92",
            "route_table_id": "rtb-0ef7ed4cc81b272fd",
            "subnet_id": "subnet-075caa42fbab83a4e"
          },
          "dependencies": [
            "aws_internet_gateway.task-IG",
            "aws_route_table.task-RT",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381492201346:security-group/sg-00d75edc29609aacc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d75edc29609aacc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240605133745567200000001",
            "name_prefix": "terraform-",
            "owner_id": "381492201346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Task-SG"
            },
            "tags_all": {
              "Name": "Task-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05520ee0a5c723c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381492201346:subnet/subnet-075caa42fbab83a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075caa42fbab83a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492201346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Task-subnet"
            },
            "tags_all": {
              "Name": "Task-subnet"
            },
            "vpc_id": "vpc-05520ee0a5c723c71"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381492201346:vpc/vpc-05520ee0a5c723c71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-03f1d63f2e43b59fe",
            "default_route_table_id": "rtb-0959fc4631b21e834",
            "default_security_group_id": "sg-0984e709c0a18a1f3",
            "dhcp_options_id": "dopt-09cf0e0e3e7c0a71e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05520ee0a5c723c71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0959fc4631b21e834",
            "owner_id": "381492201346",
            "tags": {
              "Name": "Task-terraform"
            },
            "tags_all": {
              "Name": "Task-terraform"
            }
          }
        }
      ]
    }
  ]
}